--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#spring:
+#jackson:
+#serialization:
+#WRITE_DATES_AS_TIMESTAMPS: false
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
